[package]
name = "ractor_utilities"
version = "0.7.2"
authors = ["Vince Scott"]
description = "Utilities for Ractor actors"
documentation = "https://docs.rs/ractor"
license = "MIT"
edition = "2018"
keywords = ["actor", "ractor", "cluster"]
repository = "https://github.com/slawlor/ractor"
readme = "README.md"
homepage = "https://github.com/slawlor/ractor"
categories = ["actor", "erlang"]


[dependencies]
## Required dependencies
async-trait = "0.1"
bytes = { version = "1" }
futures = "0.3.25"
futures-sink = "0.3.25"
futures-util = "0.3.25"
log = "0.4"
notify = "5.1"
prost = { version = "0.11" }
prost-types = { version = "0.11" }
ractor = { version = "0.7.2", features = ["cluster"], path = "../ractor" }
tokio = { version = "1", features = ["rt", "time", "sync", "macros", "net", "io-util"]}

## Optional dependencies
# tokio-rustls = { version = "0.23", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "time", "sync", "macros", "net", "io-util", "rt-multi-thread"] }
